# fletbox

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/: setup.py
src/fletbox/: __init__.py  fletbox.py
